<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.orion.kit</groupId>
    <artifactId>orion-kit</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <modules>
        <module>orion-common</module>
        <module>orion-modules</module>
        <module>orion-spring</module>
    </modules>

    <packaging>pom</packaging>
    <name>orion-kit</name>
    <description>Orion Dev Kit</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <orion.common.version>1.0.0-SNAPSHOT</orion.common.version>
        <orion.modules.version>1.0.0-SNAPSHOT</orion.modules.version>
        <orion.spring.version>1.0.0-SNAPSHOT</orion.spring.version>
        <junit.version>4.12</junit.version>
        <spring.version>4.3.10.RELEASE</spring.version>
        <spring.mvc.version>4.3.10.RELEASE</spring.mvc.version>
        <cglib.version>3.2.6</cglib.version>
        <jedis.version>2.1.0</jedis.version>
        <fastjson.version>1.2.70</fastjson.version>
        <jackson.version>2.10.2</jackson.version>
        <google.zxing.version>3.3.3</google.zxing.version>
        <thumbnailator.version>0.4.8</thumbnailator.version>
        <gson.version>2.8.4</gson.version>
        <servlet.version>3.1.0</servlet.version>
        <apache.net.version>3.3</apache.net.version>
        <apache.upload.version>[1.3.3,)</apache.upload.version>
        <apache.lang3.version>3.10</apache.lang3.version>
        <apache.ftp.server.version>1.1.1</apache.ftp.server.version>
        <mail.version>1.4.7</mail.version>
        <pinyin4j.version>2.5.1</pinyin4j.version>
        <dom4j.version>1.6.1</dom4j.version>
        <emoji.version>5.1.1</emoji.version>
        <yaml.version>1.3</yaml.version>
        <aspectj.version>1.8.10</aspectj.version>
        <poi.version>4.0.0</poi.version>
        <poi.stream.version>2.1.0</poi.stream.version>
        <poi.stream.xml.version>1.4.01</poi.stream.xml.version>
        <okhttp.version>3.14.6</okhttp.version>
        <http.client.version>4.5.10</http.client.version>
        <slf4j.version>1.7.22</slf4j.version>
        <logback.version>1.1.6</logback.version>
        <log4j.slf4j.version>1.6.6</log4j.slf4j.version>
        <log4j.version>1.2.17</log4j.version>
        <nginxparser.version>0.9.3</nginxparser.version>
        <ssh2.version>262</ssh2.version>
        <jsch.version>0.1.55</jsch.version>
    </properties>

    <!--
        <build>
            <plugins>
                &lt;!&ndash; 打包插件1 &ndash;&gt;
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.4.3</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <filters>
                                    <filter>
                                        <artifact>*:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/*.SF</exclude>
                                            <exclude>META-INF/*.DSA</exclude>
                                            <exclude>META-INF/*.RSA</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                &lt;!&ndash;            <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-assembly-plugin</artifactId>
                                <version>2.4.1</version>
                                <configuration>
                                    <descriptorRefs>
                                        <descriptorRef>jar-with-dependencies</descriptorRef>
                                    </descriptorRefs>
                                    <archive/>
                                </configuration>
                                <executions>
                                    <execution>
                                        <id>make-assembly</id>
                                        <phase>package</phase>
                                        <goals>
                                            <goal>single</goal>
                                        </goals>
                                    </execution>
                                </executions>
                            </plugin>&ndash;&gt;
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </build>
    -->

</project>
